# stm32-zephyr

./: .commitlintrc.js  .markdownlint-cli2.yaml  .pre-commit-config.yaml  README.md  setup.sh  west.yml
app/: CMakeLists.txt  Main.cpp  prj.conf
app/Logging/: CMakeLists.txt  LogToStdOut.cpp
app/Logging/Include/: LogConsumerId.h  LogToStdOut.hpp  zephyr_custom_log.h
app/Source/: Main.cpp
app/src/: main.c
